# karol-oke

./: .gitignore  LICENSE  README.md  general_config.py  gui.py  jukebox.py  menu.py  mkdocs.yml  monitors.py  player.py  pyproject.toml  requirements.txt  score.py  setup.py  tools.py
docs/: getting_started.md
karoloke/: __init__.py  general_config.py  gui.py  jukebox.py  menu.py  monitors.py  player.py  player_controls.py  score.py  tools.py
